--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <img src="img/girl2.jpg" alt="">
                 <div class="img-text">
                     <p>12 Years of experience</p>
-                    <a href="">> See Protfolio</a>
+                    <a href="#protfolio">> See Protfolio</a>
                 </div>
             </div>
             <div class="about-text">
